@@ -42,6 +42,7 @@ public:
   CKinkTreeModel* KinkTreeModel() const;
   CResourceTreeItemModel* ResourceTreeModel() const;
   CScriptEditorModel* ScriptEditorModel() const;
+  QString ScriptTypeFilterForNewScripts() const;
   QUndoStack* UndoStack() const;
 
   void AddNewScriptFileToScene(QPointer<QWidget> pParentForDialog,
@@ -58,6 +59,7 @@ public:
   void UnloadProject();
   void SerializeProject();
   void ExportProject();
+  void SetScriptTypeFilterForNewScripts(const QString& sFilter);
 
 public slots:
   void SlotNodeCreated(QtNodes::Node &n);
@@ -89,6 +91,7 @@ private:
   std::weak_ptr<CDatabaseManager>                             m_wpDbManager;
   std::vector<std::weak_ptr<ITutorialStateSwitchHandler>>     m_vwpTutorialStateSwitchHandlers;
   QPointer<QWidget>                                           m_pParentWidget;
+  QString                                                     m_sScriptTypesFilter;
   bool                                                        m_bInitializingNewProject;
   bool                                                        m_bReadOnly;
 };
